# Niri-cast

./: Cargo.toml  README.md
docs/: arch-setup.md  usage.md
packaging/systemd/: niri-cast.service
scripts/: install.sh  uninstall.sh
src/: main.rs
src/adapters/: audio.rs  mod.rs  niri.rs  portal.rs  system.rs  wl_mirror.rs
src/app/: mod.rs
src/core/: audio.rs  cast.rs  mod.rs  monitors.rs  orchestrator.rs
src/diagnostics/: checks.rs  mod.rs  model.rs  report.rs
src/profiles/: auto_apply.rs  mod.rs  model.rs  store.rs
src/ui/: events.rs  mod.rs  render.rs  views.rs
